# void

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml  shell.nix
.cargo/: config.toml
build-tools/: Cargo.toml
build-tools/src/: main.rs
kernel/src/: backtrace.rs  lib.rs  list.rs  log.rs  mp.rs  per_cpu.rs  ptr.rs
kernel/src/boot/: limine.rs  mod.rs
kernel/src/gfx/font/: terminus16_8.rs
kernel/src/mem/: boxed.rs  fmt.rs  mod.rs  slab.rs
kernel/src/sync/: mod.rs  once.rs  ticket.rs
kernel/src/x86_64/: _startup.S  ksyms.S  link.ld  mod.rs  msr.rs
kernel/targets/: x86_64-unknown-void.json
src/: boot.rs  date.rs  lending.rs  lib.rs  limine.conf  list.rs  log.rs  ptr.rs
src/boot/: cmdline.rs  limine.conf  limine.rs  mod.rs
src/gfx/: fb.rs
src/gfx/font/: mod.rs
src/limine/: fb.rs  mod.rs
src/mem/: alloc.rs  fmt.rs  mod.rs  page.rs
src/sync/: mod.rs  pin.rs  raw.rs  ticket.rs
src/x86_64/: _startup.S  boot.rs  link.ld  mod.rs
