[lib]
bench = false
crate-type = ["staticlib"]
name = "void"
test = false

[package]
name = "void"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true

[dependencies]
limine = { git = "https://github.com/zlamb1/limine-rs/", version = "0.1.0" }
